# notabene

./: README.md  setup.cfg  setup.py
notabene/: flatten_notification.py  kombu_driver.py  message_service.py  notabene.py  queued_log.py
tests/: dummy_event.py  test_driver.py  test_flatten.py  test_kombu.py  test_notabene.py
tests/integration/: test_driver.py  test_with_fakes.py
