[metadata]
name = notabene
author = Dark Secret Software Inc.
author-email = admin@darksecretsoftware.com
summary = Simple AMQP consumer / publisher for OpenStack notifications
description-file = README.md
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Topic :: Software Development :: Libraries :: Python Modules
home-page = https://github.com/StackTach/notabene
keywords =
    openstack
    notifications
    amqp
    rabbitmq
    events
[files]
packages =
    notabene
